# ds295r-info-chat

./: .env.example  .gitignore  README.md  course_info.md  next.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  vercel.json
.github/workflows/: ci.yml
api/: index.py
scripts/: e2e-smoke.mjs
src/components/thread/: index.tsx
src/providers/: Stream.tsx  Thread.tsx
tests/: test_api.py
